--- a/research.ini
+++ b/research.ini
@@ -21,7 +21,7 @@ RESEARCH_MANUFACTURE_ENGINE_BLOCK_GUINAME =  Motorblock Herstellung
 RESEARCH_MANUFACTURE_ENGINE_BLOCK_DESCRIPTION
 RESEARCH_MANUFACTURE_AXLES_GUINAME = Achsen Herstellung
 RESEARCH_MANUFACTURE_AXLES_DESCRIPTION
-RESEARCH_MANUFACTURE_DOORPANELS_GUINAME = Türverkleidungs Herstellung
+RESEARCH_MANUFACTURE_DOORPANELS_GUINAME = Tuerverkleidungs Herstellung
 RESEARCH_MANUFACTURE_DOORPANELS_DESCRIPTION
 RESEARCH_MANUFACTURE_EXHAUST_GUINAME = Auspuff Herstellung
 RESEARCH_MANUFACTURE_EXHAUST_DESCRIPTION
@@ -31,7 +31,7 @@ RESEARCH_MANUFACTURE_HORNS_GUINAME = Hupen Herstellung
 RESEARCH_MANUFACTURE_HORNS_DESCRIPTION
 RESEARCH_MANUFACTURE_LIGHTS_GUINAME = Scheinwerfer Herstellung
 RESEARCH_MANUFACTURE_LIGHTS_DESCRIPTION
-RESEARCH_MANUFACTURE_RADIATOR_GUINAME = Kühler Herstellung
+RESEARCH_MANUFACTURE_RADIATOR_GUINAME = Kuehler Herstellung
 RESEARCH_MANUFACTURE_RADIATOR_DESCRIPTION
 RESEARCH_MANUFACTURE_ROOF_GUINAME = Dach Herstellung
 RESEARCH_MANUFACTURE_ROOF_DESCRIPTION
@@ -39,7 +39,7 @@ RESEARCH_MANUFACTURE_SEATS_GUINAME = Sitz Herstellung
 RESEARCH_MANUFACTURE_SEATS_DESCRIPTION
 RESEARCH_MANUFACTURE_STARTER_MOTOR_GUINAME = Start-Stop Motor Herstellung
 RESEARCH_MANUFACTURE_STARTER_MOTOR_DESCRIPTION
-RESEARCH_MANUFACTURE_STEERINGWHEELS_GUINAME = 
+RESEARCH_MANUFACTURE_STEERINGWHEELS_GUINAME = Lenkrad Herstellung
 RESEARCH_MANUFACTURE_STEERINGWHEELS_DESCRIPTION
 RESEARCH_MANUFACTURE_VALVES_GUINAME = Ventil Herstellung
 RESEARCH_MANUFACTURE_VALVES_DESCRIPTION
@@ -53,11 +53,11 @@ RESEARCH_MANUFACTURE_POWERTRAIN_GUINAME = Antriebs Montage
 RESEARCH_MANUFACTURE_POWERTRAIN_DESCRIPTION
 RESEARCH_DRIVE_SHAFT_MANUFACTURE_GUINAME = Lenkstangen Montage
 RESEARCH_DRIVE_SHAFT_MANUFACTURE_DESCRIPTION
-RESEARCH_MANUFACTURE_SUNROOF_GUINAME = Schiebedach
+RESEARCH_MANUFACTURE_SUNROOF_GUINAME = Schiebedach Herstellung
 RESEARCH_MANUFACTURE_SUNROOF_DESCRIPTION
 RESEARCH_MANUFACTURE_PANORAMIC_SUNROOF_GUINAME = Panorama Schiebedach Herstellung
 RESEARCH_MANUFACTURE_PANORAMIC_SUNROOF_DESCRIPTION
-RESEARCH_MANUFACTURE_BOOT_GUINAME = Kofferaum Herstellung
+RESEARCH_MANUFACTURE_BOOT_GUINAME = Heckklappen Herstellung
 RESEARCH_MANUFACTURE_BOOT_DESCRIPTION
 RESEARCH_MANUFACTURE_BONNET_GUINAME = Motorhauben Herstellung
 RESEARCH_MANUFACTURE_BONNET_DESCRIPTION
@@ -65,15 +65,15 @@ RESEARCH_MANUFACTURE_TIRES_GUINAME = Reifen Herstellung
 RESEARCH_MANUFACTURE_TIRES_DESCRIPTION
 RESEARCH_MANUFACTURE_BRAKES_GUINAME = Bremsen Herstellung
 RESEARCH_MANUFACTURE_BRAKES_DESCRIPTION
-RESEARCH_MANUFACTURE_ROLLCAGE_GUINAME =Uberrollkaefig Herstellung
+RESEARCH_MANUFACTURE_ROLLCAGE_GUINAME = Ueberrollkaefig Herstellung
 RESEARCH_MANUFACTURE_ROLLCAGE_DESCRIPTION
 RESEARCH_MANUFACTURE_AIRCON_GUINAME = Klimaanlagen Herstellung
 RESEARCH_MANUFACTURE_AIRCON_DESCRIPTION
 RESEARCH_MANUFACTURE_WINDSCREEN_GUINAME = Frontscheiben Herstellung
 RESEARCH_MANUFACTURE_WINDSCREEN_DESCRIPTION
-RESEARCH_SPOILER_MANUFACTURE_GUINAME = Spoiler Manufacture
+RESEARCH_SPOILER_MANUFACTURE_GUINAME = Spoiler Herstellung
 RESEARCH_SPOILER_MANUFACTURE_DESCRIPTION
-RESEARCH_PAINT_SPECIALIZATION_GUINAME = Paint Specialization
+RESEARCH_PAINT_SPECIALIZATION_GUINAME = Lackierung Spezialisierung
 RESEARCH_PAINT_SPECIALIZATION_DESCRIPTION
 RESEARCH_PAINTNOZZLES1_GUINAME = Hochdruck Farb Duesen
 RESEARCH_PAINTNOZZLES1_DESCRIPTION
@@ -94,38 +94,38 @@ RESEARCH_MOREROBOTS1_DESCRIPTION = Schaltet die option fuer einen extra slot an 
 RESEARCH_MOREROBOTS2_GUINAME = Noch mehr Roboter
 RESEARCH_MOREROBOTS2_DESCRIPTION = Schaltet die option fuer einen weiteren slot an Robotern fuer jeden slot frei
 RESEARCH_MOREROBOTS3_GUINAME = Haufenweise Roboter 
-RESEARCH_MOREROBOTS3_DESCRIPTION = DIese Option Schaltet die option fuer die maximale anzahl an Roboter fuer jeden slot frei
+RESEARCH_MOREROBOTS3_DESCRIPTION = Diese Option Schaltet die option fuer die maximale anzahl an Roboter fuer jeden slot frei
 RESEARCH_IMPROVED_EFFICIENCY_GUINAME = Verbesserte Effizienz
 RESEARCH_IMPROVED_EFFICIENCY_DESCRIPTION
 RESEARCH_IMPORT_PRIORITY_GUINAME = Import Prioritaeten
-RESEARCH_IMPORT_PRIORITY_DESCRIPTION = Schaltet slot Import menu frei
-RESEARCH_FASTER_IMPORTS_GUINAME = Schnellere Foerderbaender
-RESEARCH_FASTER_IMPORTS_DESCRIPTION = 10% Schnelleren Foerderbaender 
-RESEARCH_FASTER_IMPORTS2_GUINAME = Noch Schnelleren Foerderbaender
-RESEARCH_FASTER_IMPORTS2_DESCRIPTION = 20% Schnelleren Foerderbaender
-RESEARCH_FASTER_IMPORTS3_GUINAME = Turbo Foerderbaender
-RESEARCH_FASTER_IMPORTS3_DESCRIPTION = 30% Schnelleren Foerderbaender
-RESEARCH_FASTER_CONVEYOR_GUINAME = Schneller Nachschub 
-RESEARCH_FASTER_CONVEYOR_DESCRIPTION = 10% Schnellerer Nachschub
-RESEARCH_FASTER_CONVEYOR_2_GUINAME = Noch Schnellerer Nachschub 
-RESEARCH_FASTER_CONVEYOR_2_DESCRIPTION = 20% Schnellerer Nachschub
-RESEARCH_FASTER_RESOURCES_DELIVERY_GUINAME = Turbo Nachschub 
-RESEARCH_FASTER_RESOURCES_DELIVERY_DESCRIPTION = 30% Schnellerer Nachschub
-RESEARCH_FASTER_RESOURCES_DELIVERY_2_GUINAME = Extra Turbo Nachschub 
+RESEARCH_IMPORT_PRIORITY_DESCRIPTION = Schaltet das Import Menue frei
+RESEARCH_FASTER_IMPORTS_GUINAME = Schnellerer Import
+RESEARCH_FASTER_IMPORTS_DESCRIPTION = 10% schnellerer Import an Materialien 
+RESEARCH_FASTER_IMPORTS2_GUINAME = Noch Schnellere Import
+RESEARCH_FASTER_IMPORTS2_DESCRIPTION = 20% schnellerer Import an Materialien
+RESEARCH_FASTER_IMPORTS3_GUINAME = Turbo Import
+RESEARCH_FASTER_IMPORTS3_DESCRIPTION = 30% schnellerer Import an Materialien
+RESEARCH_FASTER_CONVEYOR_GUINAME = Schnellere Foerderbaender 
+RESEARCH_FASTER_CONVEYOR_DESCRIPTION = Erhoeht die Geschwindigkeit der Produktionslinien
+RESEARCH_FASTER_CONVEYOR_2_GUINAME = Noch Schnellere Foerderbaender
+RESEARCH_FASTER_CONVEYOR_2_DESCRIPTION = Erhoeht nochmals die Geschwindigkeit der Produktionslinien
+RESEARCH_FASTER_RESOURCES_DELIVERY_GUINAME = Schneller Nachschub 
+RESEARCH_FASTER_RESOURCES_DELIVERY_DESCRIPTION = Erhoeht die Geschwindigkeit der Materiallieferungen
+RESEARCH_FASTER_RESOURCES_DELIVERY_2_GUINAME = Turbo Nachschub 
 RESEARCH_FASTER_RESOURCES_DELIVERY_2_DESCRIPTION = Nur fliegen ist (noch) Schneller
 RESEARCH_PREDICTIVE_STOCK_CONTROL_GUINAME = Praediktive Bestandskontrole
-RESEARCH_PREDICTIVE_STOCK_CONTROL_DESCRIPTION = Automatische Uberwachung des Bestands 
-RESEARCH_POWERPLANT_EFFICIENCY_GUINAME = Wirkungsgrad des Kraftwerks 
-RESEARCH_POWERPLANT_EFFICIENCY_DESCRIPTION Zeigt die Leistungsfähigkeit des Kraftwerks
-RESEARCH_EXPANSION_GUINAME = Fabrik erweiterung
-RESEARCH_EXPANSION_DESCRIPTION = Erlaubt die erweiterung der Firma über den zukauf weiterer land slots
-RESEARCH_ADMINISTRATION_GUINAME = Administration
-RESEARCH_ADMINISTRATION_DESCRIPTION = Geschaeftsfuehrung
+RESEARCH_PREDICTIVE_STOCK_CONTROL_DESCRIPTION = Automatische Uberwachung des Bestands. Loest die Bestellung aus, nachdem sie verbraucht wurde. 
+RESEARCH_POWERPLANT_EFFICIENCY_GUINAME = Kraeftige Kraftwerke 
+RESEARCH_POWERPLANT_EFFICIENCY_DESCRIPTION = Erhoeht die Effektivitaet des Kraftwerks
+RESEARCH_EXPANSION_GUINAME = Fabrikerweiterung
+RESEARCH_EXPANSION_DESCRIPTION = Erlaubt die erweiterung der Firma über den zukauf weiterer Hallen
+RESEARCH_ADMINISTRATION_GUINAME = Verwaltung
+RESEARCH_ADMINISTRATION_DESCRIPTION
 RESEARCH_COMPUTERISED_SALES_GUINAME = Computergestuetzte Verkaeufe
 RESEARCH_COMPUTERISED_SALES_DESCRIPTION = EDV Analage für den Verkauf
 RESEARCH_EXPEDITED_SALES_GUINAME = Beschleunigter Verkauf
-RESEARCH_EXPEDITED_SALES_DESCRIPTION = Schneller Verkauf im Verkaufsraum
-RESEARCH_BODY_DESIGN_GUINAME = Karosserie Konstruktion
+RESEARCH_EXPEDITED_SALES_DESCRIPTION
+RESEARCH_BODY_DESIGN_GUINAME = Mehr Karosserien
 RESEARCH_BODY_DESIGN_DESCRIPTION
 RESEARCH_BODY_SUV_GUINAME = SUV
 RESEARCH_BODY_SUV_DESCRIPTION = Erlaubt die Produktion des SUV
@@ -139,25 +139,25 @@ RESEARCH_MANUFACTURE_SENSORS_GUINAME = Sensoren Herstellung
 RESEARCH_MANUFACTURE_SENSORS_DESCRIPTION
 RESEARCH_METAL_ROLLING_GUINAME = Stahlblech Walzen
 RESEARCH_METAL_ROLLING_DESCRIPTION
-RESEARCH_RETOOLING_BASIC_GUINAME = Basic re-tooling
-RESEARCH_RETOOLING_BASIC_DESCRIPTION = Increases refund when demolishing equipment by 5%
-RESEARCH_RETOOLING_ADVANCED_GUINAME = Advanced re-tooling
-RESEARCH_RETOOLING_ADVANCED_DESCRIPTION = Increases refund when demolishing equipment by 5%
-RESEARCH_POWER_PRODUCTION_GUINAME = Power Production
+RESEARCH_RETOOLING_BASIC_GUINAME = Wiederverwertung
+RESEARCH_RETOOLING_BASIC_DESCRIPTION = Erhoeht den Wiederverkaufswert beim Zerstoeren einer Anlage um 5%
+RESEARCH_RETOOLING_ADVANCED_GUINAME = Erweiterte Wiederverwertung
+RESEARCH_RETOOLING_ADVANCED_DESCRIPTION = Erhoeht den Wiederverkaufswert beim Zerstoeren einer Anlage um weitere 5%
+RESEARCH_POWER_PRODUCTION_GUINAME = Strom Produktion
 RESEARCH_POWER_PRODUCTION_DESCRIPTION
 RESEARCH_HO_POWER_GUINAME = Hochleistungs Kraftwerk
 RESEARCH_HO_POWER_DESCRIPTION
 RESEARCH_RESEARCH_CENTERS_GUINAME = Forschungszentrum
 RESEARCH_RESEARCH_CENTERS_DESCRIPTION
-RESEARCH_SAFETY_FEATURES_GUINAME = Sicherheits Merkmale
+RESEARCH_SAFETY_FEATURES_GUINAME = Gefahrenabwehr Systeme
 RESEARCH_SAFETY_FEATURES_DESCRIPTION
-RESEARCH_ANTILOCK_BRAKES_GUINAME = Anti BLockier Bremsen (ABS)
+RESEARCH_ANTILOCK_BRAKES_GUINAME = AntibLockiersystem (ABS)
 RESEARCH_ANTILOCK_BRAKES_DESCRIPTION
 RESEARCH_EMERGENCY_BRAKE_ASSIST_GUINAME = Notfall Brems Assistent
 RESEARCH_EMERGENCY_BRAKE_ASSIST_DESCRIPTION
 RESEARCH_REVERSING_CAMERA_GUINAME = Rueckfahr Kamera
 RESEARCH_REVERSING_CAMERA_DESCRIPTION
-RESEARCH_TIRE_PRESSURE_SENSORS_GUINAME = Reifen druck Sensor
+RESEARCH_TIRE_PRESSURE_SENSORS_GUINAME = Reifendruck Sensor
 RESEARCH_TIRE_PRESSURE_SENSORS_DESCRIPTION
 RESEARCH_DRIVER_AIRBAG_GUINAME = Fahrer Airbag
 RESEARCH_DRIVER_AIRBAG_DESCRIPTION
@@ -171,7 +171,7 @@ RESEARCH_DRIVER_ASSISTANCE_GUINAME = Fahrerassistenzsystem
 RESEARCH_DRIVER_ASSISTANCE_DESCRIPTION
 RESEARCH_POWER_STEERING_GUINAME = Servo Lenkung
 RESEARCH_POWER_STEERING_DESCRIPTION
-RESEARCH_AUTOSTEER_HEADLIGHTS_GUINAME = Automatisch Gesteuerte Frontscheinwerfer
+RESEARCH_AUTOSTEER_HEADLIGHTS_GUINAME = Adaptives Kurvenlicht
 RESEARCH_AUTOSTEER_HEADLIGHTS_DESCRIPTION
 RESEARCH_CRUISE_CONTROL_GUINAME = Tempomat
 RESEARCH_CRUISE_CONTROL_DESCRIPTION
@@ -179,9 +179,9 @@ RESEARCH_ADAPTIVE_CRUISE_CONTROL_GUINAME = Adaptiver Tempomat
 RESEARCH_ADAPTIVE_CRUISE_CONTROL_DESCRIPTION
 RESEARCH_TRAFFIC_AWARE_CRUISE_CONTROL_GUINAME = Voll Automatischer Tempomat
 RESEARCH_TRAFFIC_AWARE_CRUISE_CONTROL_DESCRIPTION
-RESEARCH_SECURITY_FEATURES_GUINAME = Sicherheits Merkmale
+RESEARCH_SECURITY_FEATURES_GUINAME = Sicherheits Systeme
 RESEARCH_SECURITY_FEATURES_DESCRIPTION
-RESEARCH_CENTRAL_LOCKING_GUINAME = Zentral Verigelung
+RESEARCH_CENTRAL_LOCKING_GUINAME = Zentraverriegelung
 RESEARCH_CENTRAL_LOCKING_DESCRIPTION
 RESEARCH_CAR_ALARM_GUINAME = Alarmanlage
 RESEARCH_CAR_ALARM_DESCRIPTION
@@ -191,7 +191,7 @@ RESEARCH_ENVIRONMENTAL_FEATURES_GUINAME = Umweltschutz Merkmale
 RESEARCH_ENVIRONMENTAL_FEATURES_DESCRIPTION
 RESEARCH_AIRCON_GUINAME = Klimaanlage
 RESEARCH_AIRCON_DESCRIPTION
-RESEARCH_CLIMATE_CONTROL_GUINAME = Klima Kontrolle
+RESEARCH_CLIMATE_CONTROL_GUINAME = Klima Automatik
 RESEARCH_CLIMATE_CONTROL_DESCRIPTION
 RESEARCH_POLLEN_FILTER_GUINAME = Pollen Filter
 RESEARCH_POLLEN_FILTER_DESCRIPTION
@@ -205,45 +205,45 @@ RESEARCH_SUN_ROOF_GUINAME = Schiebe Dach
 RESEARCH_SUN_ROOF_DESCRIPTION
 RESEARCH_PANORAMIC_SUNROOF_GUINAME = Panorama Schiebedach
 RESEARCH_PANORAMIC_SUNROOF_DESCRIPTION
-RESEARCH_CONVENIENCE_FEATURES_GUINAME = Convenience Features
+RESEARCH_CONVENIENCE_FEATURES_GUINAME = Komfort Merkmale
 RESEARCH_CONVENIENCE_FEATURES_DESCRIPTION
-RESEARCH_ELECTRIC_WINDOWS_GUINAME = Electric Windows
+RESEARCH_ELECTRIC_WINDOWS_GUINAME = Elektrische Fensterheber
 RESEARCH_ELECTRIC_WINDOWS_DESCRIPTION
-RESEARCH_SATNAV_GUINAME = Sat Nav
+RESEARCH_SATNAV_GUINAME = GPS Navigation
 RESEARCH_SATNAV_DESCRIPTION
 RESEARCH_AUTO_WIPERS_GUINAME = Automatische Scheibenwischer
 RESEARCH_AUTO_WIPERS_DESCRIPTION
 RESEARCH_AUTO_HEADLIGHTS_GUINAME = Automatische Frontscheinwerfer
 RESEARCH_AUTO_HEADLIGHTS_DESCRIPTION
-RESEARCH_DIRECTIONAL_HEADLIGHTS_GUINAME = Directional Headlights
-RESEARCH_DIRECTIONAL_HEADLIGHTS_DESCRIPTION Ausgerichtete Frontscheinwerfer
+RESEARCH_DIRECTIONAL_HEADLIGHTS_GUINAME = Ausgerichtete Frontscheinwerfer
+RESEARCH_DIRECTIONAL_HEADLIGHTS_DESCRIPTION 
 RESEARCH_XENON_HEADLIGHTS_GUINAME = Xenon Frontscheinwerfer
 RESEARCH_XENON_HEADLIGHTS_DESCRIPTION
 RESEARCH_LED_HEADLIGHTS_GUINAME = LED Frontscheinwerfer
 RESEARCH_LED_HEADLIGHTS_DESCRIPTION
-RESEARCH_POWERED_SEATS_GUINAME = Elektrische Sitze 
+RESEARCH_POWERED_SEATS_GUINAME = Verstellbare Sitze 
 RESEARCH_POWERED_SEATS_DESCRIPTION
-RESEARCH_POWERED_STEER_ADJUSTMENT_GUINAME = lenkhilfe
+RESEARCH_POWERED_STEER_ADJUSTMENT_GUINAME = Lenkhilfe
 RESEARCH_POWERED_STEER_ADJUSTMENT_DESCRIPTION
 RESEARCH_POWERED_TAILGATE_GUINAME =  Automatische Heckklappe
 RESEARCH_POWERED_TAILGATE_DESCRIPTION
-RESEARCH_ENTERTAINMENT_GUINAME = Entertainment Systeme
+RESEARCH_ENTERTAINMENT_GUINAME = Entertainment Merkmale
 RESEARCH_ENTERTAINMENT_DESCRIPTION
 RESEARCH_IN_CAR_MUSIC_GUINAME = Entertainment System
 RESEARCH_IN_CAR_MUSIC_DESCRIPTION
-RESEARCH_BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Telefon Support
+RESEARCH_BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Telefon Unterstuetzung
 RESEARCH_BLUETOOTH_PHONE_SUPPORT_DESCRIPTION
-RESEARCH_VOICE_RECOGNITION_GUINAME = Sprach ERkennung
+RESEARCH_VOICE_RECOGNITION_GUINAME = Sprach Erkennung
 RESEARCH_VOICE_RECOGNITION_DESCRIPTION
-RESEARCH_TOUCHSCREEN_GUINAME = Touchscreen Display
+RESEARCH_TOUCHSCREEN_GUINAME = Touchscreen
 RESEARCH_TOUCHSCREEN_DESCRIPTION
 RESEARCH_PERFORMANCE_FEATURES_GUINAME = Leistungs Merkmale 
 RESEARCH_PERFORMANCE_FEATURES_DESCRIPTION
-RESEARCH_ALUMINIUM_BODY_GUINAME = Aluminium Fahrwerk
+RESEARCH_ALUMINIUM_BODY_GUINAME = Aluminium Karosse
 RESEARCH_ALUMINIUM_BODY_DESCRIPTION
 RESEARCH_SPOILER_GUINAME = Spoiler
 RESEARCH_SPOILER_DESCRIPTION
-RESEARCH_STOP_START_ENGINE_GUINAME = Start Stop Motor
+RESEARCH_STOP_START_ENGINE_GUINAME = Start-Stop Automatik
 RESEARCH_STOP_START_ENGINE_DESCRIPTION
 RESEARCH_ALLOY_WHEELS_GUINAME = Leichtmetall Felgen
 RESEARCH_ALLOY_WHEELS_DESCRIPTION
