--- a/features.ini
+++ b/features.ini
@@ -43,5 +43,5 @@ FEATURE_XENON_HEADLIGHTS_GUINAME = Xenon Frontscheinwerfer
 FEATURE_LED_HEADLIGHTS_GUINAME = LED Frontscheinwerfer
 FEATURE_ALLOY_WHEELS_GUINAME = Leichtmetall Felgen
 FEATURE_POLISH_GUINAME = Polierte Lackierung
-FEATURE_TOUCHSCREEN_GUINAME = Touchscreen Bildschrim
+FEATURE_TOUCHSCREEN_GUINAME = Touchscreen
 
