--- a/upgrades.ini
+++ b/upgrades.ini
@@ -1,21 +1,21 @@
 [config]
-ADAPTIVE_CRUISE_CONTROL_GUINAME = Tempomat
+ADAPTIVE_CRUISE_CONTROL_GUINAME = Adaptiver Tempomat
 ALLOY_WHEELS_GUINAME = Leichtmetall Felgen
 ALUMINIUM_BODY_GUINAME = Aluminium Karosserie
-ANTILOCKBRAKES_GUINAME = Anti Blockier Bremsen 
-AUTOSTEER_HEADLIGHTS_GUINAME = Elektrische Frontscheinwerfer
+ANTILOCKBRAKES_GUINAME = Antiblockiersystem 
+AUTOSTEER_HEADLIGHTS_GUINAME = Adaptives Kurvenlicht
 AUTO_HEADLIGHTS_GUINAME = Automatische Frontscheinwerfer
 AUTO_WIPERS_GUINAME = Automatische Scheibenwischer
-BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Telefon Support
+BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Telefon Unterstuetzung
 CAR_ALARM_GUINAME = Alarmanlage
 CENTRAL_LOCKING_GUINAME = Zentralveriegelung
-CLIMATECONTROL_GUINAME = Klima Kontrolle
+CLIMATECONTROL_GUINAME = Klima Automatik
 COMPUTERIZED_SALES_GUINAME = Computergestuetzter Verkauf
 CRUISE_CONTROL_GUINAME = Tempomat
 DIRECTIONAL_HEADLIGHTS_GUINAME = Ausgerichtete Frontscheinwerfer
 DRIVER_AIRBAG_GUINAME = Fahrer Airbag
 ELECTRIC_WINDOWS_GUINAME = Elektrische Fensterheber 
-EMERGENCY_BRAKE_ASSIST_GUINAME = Notfall Bremsasisstenr
+EMERGENCY_BRAKE_ASSIST_GUINAME = Notfall Bremsassistent
 EXPEDITED_SALES_GUINAME = Beschleunigter Verkauf
 EXTRAROBOTS1_GUINAME = Extra Roboter I
 EXTRAROBOTS2_GUINAME = Extra Roboter II
@@ -23,33 +23,33 @@ EXTRAROBOTS3_GUINAME = Extra Roboter III
 FASTER_DRYING_GUINAME = Schnellere Trockung
 FASTER_DRYING2_GUINAME = Turbo Trockung
 FASTER_DRYING3_GUINAME = Ultra schnelle Trocknung
-HEATED_SEATS_GUINAME = Sitzheitzung
-HEATER_GUINAME = Heitzung
+HEATED_SEATS_GUINAME = Sitzheizung
+HEATER_GUINAME = Heizung
 IN_CAR_MUSIC_GUINAME = Entertainment System
-KEYLESS_ENTRY_GUINAME = Schluesselloses zugangssystem
+KEYLESS_ENTRY_GUINAME = Schluesselloses Zugangssystem
 LANE_DEPARTURE_WARNING_SYSTEM_GUINAME = Spurhalteassistent
 LEATHER_INTERIOR_GUINAME = Leder Innenausstattung
-LED_HEADLIGHTS_GUINAME = LED frontscheinwerfer
-MAKE_ALLOY_WHEELS_GUINAME = Leichtmetall Felgen Herstellung
-PAINTNOZZLES1_GUINAME = Hochdruck Farb Duesen
+LED_HEADLIGHTS_GUINAME = LED Frontscheinwerfer
+MAKE_ALLOY_WHEELS_GUINAME = Leichtmetallfelgen Herstellung
+PAINTNOZZLES1_GUINAME = Hochdruck Farbduesen
 PANORAMIC_SUNROOF_GUINAME = Panorama Schiebedach
 PASSENGER_AIRBAG_GUINAME = Beifahrer Airbag
 POLLEN_FILTER_GUINAME = Pollen Filter
-POWERED_SEATS_GUINAME = Elektrische Sitze
+POWERED_SEATS_GUINAME = Verstellbare Sitze
 POWERED_STEER_ADJUSTMENT_GUINAME = Lenkhilfe
 POWERED_TAILGATE_GUINAME = Automatische Heckklappe
 POWERPLANT_EFFICIENCY_GUINAME = Effizientes Kraftwerk
-POWERSTEERING_GUINAME = Servo Lenkung
-PREDICTIVE_STOCK_CONTROL_GUINAME = Praediktive nachschub Kontrolle
-REVERSING_CAMERA_GUINAME = Rückfahr Kamera
+POWERSTEERING_GUINAME = Servolenkung
+PREDICTIVE_STOCK_CONTROL_GUINAME = Praediktive Nachschub Kontrolle
+REVERSING_CAMERA_GUINAME = Rückfahrkamera
 SATNAV_GUINAME = GPS Navigation
 SPARE_WHEEL_GUINAME = Reserverad
 SPOILER_GUINAME = Spoiler
 STOP_START_ENGINE_GUINAME = Start-Stop Motor
 SUN_ROOF_GUINAME = Schiebedach
-TIRE_PRESSURE_SENSORS_GUINAME = Reifendruck sensoren
-TOUCHSCREEN_GUINAME = Touchscreen Display
+TIRE_PRESSURE_SENSORS_GUINAME = Reifendrucksensoren
+TOUCHSCREEN_GUINAME = Touchscreen
 TRAFFIC_AWARE_CRUISE_CONTROL_GUINAME = Vollautomatischer Tempomat
-VOICE_RECOGNITION_GUINAME = Sprach erkennung
+VOICE_RECOGNITION_GUINAME = Spracherkennung
 XENON_HEADLIGHTS_GUINAME = Xenon Frontscheinwerfer
 
