--- a/features.ini
+++ b/features.ini
@@ -11,7 +11,7 @@ FEATURE_LANE_DEPARTURE_WARNING_SYSTEM_GUINAME = Spurhalteassistent
 FEATURE_POWER_STEERING_GUINAME = Servo Lenkung
 FEATURE_AUTOSTEER_HEADLIGHTS_GUINAME = Adaptives Kurvenlicht
 FEATURE_CRUISE_CONTROL_GUINAME = Tempomat
-FEATURE_ADAPTIVE_CRUISE_CONTROL_GUINAME = Adapativer Tempomat
+FEATURE_ADAPTIVE_CRUISE_CONTROL_GUINAME = Adaptiver Tempomat
 FEATURE_TRAFFIC_AWARE_CRUISE_CONTROL_GUINAME = Voll Automatischer Tempomat
 FEATURE_CENTRAL_LOCKING_GUINAME = Zentralveriegelung
 FEATURE_CAR_ALARM_GUINAME = Alarmanlage
