--- a/achievements.ini
+++ b/achievements.ini
@@ -1,30 +1,30 @@
 [config]
 AWESOME_OUTPUT_GUINAME = Freie fahrt Voraus
-AWESOME_OUTPUT_DESCRIPTION = Ihre Produktionslinie(n) haben eine beeindruckende Leistung gezeigt. Freie fahrt Voraus f¸r ihre Firma.
-AWESOME_OUTPUT_REQUIREMENTS = Stellen sie 1,000 autos in 50 stunden in einer einzigen spiel sitzung her.
+AWESOME_OUTPUT_DESCRIPTION = Ihre Produktionslinie(n) haben eine beeindruckende Leistung gezeigt. Freie fahrt Voraus f√ºr ihre Firma.
+AWESOME_OUTPUT_REQUIREMENTS = Stellen sie 1,000 Autos in 50 stunden in einer einzigen spiel sitzung her.
 CONSISTENT_EFFICIENCY_GUINAME = Volle fahrt Voraus
-CONSISTENT_EFFICIENCY_DESCRIPTION = Grossartige Arbeit! Die Geschaefte Laufen bestens. Sie haben verstanden das Effizienz ist das A & O in richtung Profit Schnallen Sie sich an den ab jetzt heisst es freie fahrt Voraus f¸r ihre Firma
-CONSISTENT_EFFICIENCY_REQUIREMENTS = Halten sie 50% Produktions Effizienz f¸r 10 stunden bei.
+CONSISTENT_EFFICIENCY_DESCRIPTION = Grossartige Arbeit! Die Geschaefte Laufen bestens. Sie haben verstanden das Effizienz ist das A & O in richtung Profit Schnallen Sie sich an den ab jetzt heisst es freie fahrt Voraus f√ºr ihre Firma
+CONSISTENT_EFFICIENCY_REQUIREMENTS = Halten sie 50% Produktions Effizienz f√ºr 10 stunden bei.
 HIGH_EFFICIENCY_GUINAME = Effizienz Bewusst 
 HIGH_EFFICIENCY_DESCRIPTION = Gute arbeit, Ihre Firma Arbeit Effizent Jetzt Nicht Nachlassen!
 HIGH_EFFICIENCY_REQUIREMENTS = 50% Der Produktionslinien Arbeiten Perfekt.
 IMPRESSIVE_OUTPUT_GUINAME = Bumper Output
-IMPRESSIVE_OUTPUT_DESCRIPTION = Vorbildlich,Die Produktion laeuft und die buchaltung ist auch zufrieden weiter so der weg ist das ziel =).î
+IMPRESSIVE_OUTPUT_DESCRIPTION = Vorbildlich,Die Produktion laeuft und die buchaltung ist auch zufrieden weiter so der weg ist das ziel =).‚Äù
 IMPRESSIVE_OUTPUT_REQUIREMENTS = Stellen sie 350 autos in 20 stunden in einer einzigen spiel sitzung her.
 MAINSTREAM_PRODUCTION_GUINAME = Mittelstaendisches Unternehmen
-MAINSTREAM_PRODUCTION_DESCRIPTION = Prima, 500 autos sind vom band gelaufen Sind sie Manns genug ihr Unternehmen weiter Voranzutreiben?î
-MAINSTREAM_PRODUCTION_REQUIREMENTS = Stellen sie 500 In einem einzigen spiel her.
+MAINSTREAM_PRODUCTION_DESCRIPTION = Prima, 500 autos sind vom band gelaufen Sind sie Manns genug ihr Unternehmen weiter Voranzutreiben?‚Äù
+MAINSTREAM_PRODUCTION_REQUIREMENTS = Stellen sie 500 Autos In einem einzigen spiel her.
 MASS_PRODUCTION_GUINAME = Massen Produktion
-MASS_PRODUCTION_DESCRIPTION = Herzlichen Glueckwunsch, 1000 autos wurden fertiggestellt sie sind nun bereit f¸r die Massen Produktion Jetzt nicht nachlassen die Grosse welt der Autobauer wartet auf sie! î
-MASS_PRODUCTION_REQUIREMENTS = Stellen sie 1,000 in einem einzigen Spiel Her.
+MASS_PRODUCTION_DESCRIPTION = Herzlichen Glueckwunsch, 1000 autos wurden fertiggestellt sie sind nun bereit f√ºr die Massen Produktion Jetzt nicht nachlassen die Grosse welt der Autobauer wartet auf sie! ‚Äù
+MASS_PRODUCTION_REQUIREMENTS = Stellen sie 1,000 Autos in einem einzigen Spiel Her.
 NICHE_PRODUCTION_GUINAME = Start-up Unternehmen
-NICHE_PRODUCTION_DESCRIPTION = Okay, Die Produktion laeuft und die ersten autos sind vom band gerollt aber das wars noch nicht... oder?î
-NICHE_PRODUCTION_REQUIREMENTS = Stellen sie 100 autos in einem einzelnen spiel her.
+NICHE_PRODUCTION_DESCRIPTION = Okay, Die Produktion laeuft und die ersten autos sind vom band gerollt aber das wars noch nicht... oder?‚Äù
+NICHE_PRODUCTION_REQUIREMENTS = Stellen sie 100 Autos in einem einzelnen spiel her.
 POCKET_CHANGE_GUINAME = Gewinne..Gewinne..Gewinne
-POCKET_CHANGE_DESCRIPTION = Ein Grosser tag fuer ihre Firma, Denn sie haben grade die Millionen Marke durchbrochen d.h 1 Million Umsatz Glueckwunsch und machen sie weiter so.î
+POCKET_CHANGE_DESCRIPTION = Ein Grosser tag fuer ihre Firma, Denn sie haben grade die Millionen Marke durchbrochen d.h 1 Million Umsatz Glueckwunsch und machen sie weiter so.‚Äù
 POCKET_CHANGE_REQUIREMENTS = 1 Million Umsatz in einem einzigen Spiel.
-PREMIUM_PRODUCTION_GUINAME = Qualit‰t zahlt sich aus
-PREMIUM_PRODUCTION_DESCRIPTION = Ihre Innovations & Investitionsstrategie haben sich ausgezahlt und einige anspruchsvolle Kunden haben nun ihre Aufmerksamkeit Ein guter Ruf bedeutet, ihr weg voran mit Erfolg gepflastert sein koennteî
+PREMIUM_PRODUCTION_GUINAME = Qualit√§t zahlt sich aus
+PREMIUM_PRODUCTION_DESCRIPTION = Ihre Innovations & Investitionsstrategie haben sich ausgezahlt und einige anspruchsvolle Kunden haben nun ihre Aufmerksamkeit Ein guter Ruf bedeutet, ihr weg voran mit Erfolg gepflastert sein koennte‚Äù
 PREMIUM_PRODUCTION_REQUIREMENTS = Verkaufen sie in einem einzigen spiel 1000 autos zum preis von 25,000 euro oder Hoeher.
 RAPID_FIRE_REVENUE_GUINAME = eine halbe Million ist noch keine ganze Milion
 RAPID_FIRE_REVENUE_DESCRIPTION = Die Buchhaltung ist in feierlaune, Denn sie haben grade mittgeteilt das sie 500tsd euro Umsatz in nur einer stunde erzielt haben Bravo und weiter gehts.
