--- a/achievements.ini
+++ b/achievements.ini
@@ -1,38 +1,38 @@
 [config]
 AWESOME_OUTPUT_GUINAME = Freie fahrt Voraus
-AWESOME_OUTPUT_DESCRIPTION = Ihre Produktionslinie(n) haben eine beeindruckende Leistung gezeigt. Freie fahrt Voraus für ihre Firma.
-AWESOME_OUTPUT_REQUIREMENTS = Stellen sie 1,000 Autos in 50 stunden in einer einzigen spiel sitzung her.
+AWESOME_OUTPUT_DESCRIPTION = Ihre Produktionslinie(n) haben eine beeindruckende Leistung gezeigt. Freie fahrt Voraus fuer ihre Firma.
+AWESOME_OUTPUT_REQUIREMENTS = Stellen sie 1'000 Autos in 50 stunden in einer einzigen Spielsitzung her.
 CONSISTENT_EFFICIENCY_GUINAME = Volle fahrt Voraus
-CONSISTENT_EFFICIENCY_DESCRIPTION = Grossartige Arbeit! Die Geschaefte Laufen bestens. Sie haben verstanden das Effizienz ist das A & O in richtung Profit Schnallen Sie sich an den ab jetzt heisst es freie fahrt Voraus für ihre Firma
-CONSISTENT_EFFICIENCY_REQUIREMENTS = Halten sie 50% Produktions Effizienz für 10 stunden bei.
-HIGH_EFFICIENCY_GUINAME = Effizienz Bewusst 
-HIGH_EFFICIENCY_DESCRIPTION = Gute arbeit, Ihre Firma Arbeit Effizent Jetzt Nicht Nachlassen!
-HIGH_EFFICIENCY_REQUIREMENTS = 50% Der Produktionslinien Arbeiten Perfekt.
-IMPRESSIVE_OUTPUT_GUINAME = Bumper Output
-IMPRESSIVE_OUTPUT_DESCRIPTION = Vorbildlich,Die Produktion laeuft und die buchaltung ist auch zufrieden weiter so der weg ist das ziel =).”
-IMPRESSIVE_OUTPUT_REQUIREMENTS = Stellen sie 350 autos in 20 stunden in einer einzigen spiel sitzung her.
+CONSISTENT_EFFICIENCY_DESCRIPTION = Grossartige Arbeit! Die Geschaefte Laufen bestens. Sie haben verstanden, dass Effizienz das A & O in richtung Profit ist. Schnallen Sie sich an, denn ab jetzt heisst es volle fahrt Voraus fuer ihre Firma.
+CONSISTENT_EFFICIENCY_REQUIREMENTS = Halten sie die Produktionseffizienz fuer 10 Stunden bei 50%.
+HIGH_EFFICIENCY_GUINAME = Effizienzbewusst 
+HIGH_EFFICIENCY_DESCRIPTION = Gute arbeit, Ihre Firma Arbeit effizent. Jetzt Nicht Nachlassen!
+HIGH_EFFICIENCY_REQUIREMENTS = 50% Der Produktionslinien arbeiten perfekt.
+IMPRESSIVE_OUTPUT_GUINAME = Steile Exporte
+IMPRESSIVE_OUTPUT_DESCRIPTION = Vorbildlich! Die Produktion laeuft und die Buchaltung ist auch zufrieden. Weiter so! Der Weg ist das Ziel =)”
+IMPRESSIVE_OUTPUT_REQUIREMENTS = Stellen Sie 350 Autos in 20 Stunden in einer einzigen Spielsitzung her.
 MAINSTREAM_PRODUCTION_GUINAME = Mittelstaendisches Unternehmen
-MAINSTREAM_PRODUCTION_DESCRIPTION = Prima, 500 autos sind vom band gelaufen Sind sie Manns genug ihr Unternehmen weiter Voranzutreiben?”
-MAINSTREAM_PRODUCTION_REQUIREMENTS = Stellen sie 500 Autos In einem einzigen spiel her.
-MASS_PRODUCTION_GUINAME = Massen Produktion
-MASS_PRODUCTION_DESCRIPTION = Herzlichen Glueckwunsch, 1000 autos wurden fertiggestellt sie sind nun bereit für die Massen Produktion Jetzt nicht nachlassen die Grosse welt der Autobauer wartet auf sie! ”
-MASS_PRODUCTION_REQUIREMENTS = Stellen sie 1,000 Autos in einem einzigen Spiel Her.
+MAINSTREAM_PRODUCTION_DESCRIPTION = Prima, 500 Autos sind vom Band gelaufen. Haben Sie den Mut, Ihr Unternehmen weiter voranzutreiben?”
+MAINSTREAM_PRODUCTION_REQUIREMENTS = Stellen sie 500 Autos in einem einzigen Spiel her.
+MASS_PRODUCTION_GUINAME = Massenproduktion
+MASS_PRODUCTION_DESCRIPTION = Herzlichen Glueckwunsch, 1'000 autos wurden fertiggestellt. Sie sind nun bereit fuer die Massenproduktion. Jetzt nicht nachlassen! Die grosse Welt der Autobauer wartet auf Sie! ”
+MASS_PRODUCTION_REQUIREMENTS = Stellen Sie 1'000 Autos in einem einzigen Spiel Her.
 NICHE_PRODUCTION_GUINAME = Start-up Unternehmen
-NICHE_PRODUCTION_DESCRIPTION = Okay, Die Produktion laeuft und die ersten autos sind vom band gerollt aber das wars noch nicht... oder?”
-NICHE_PRODUCTION_REQUIREMENTS = Stellen sie 100 Autos in einem einzelnen spiel her.
+NICHE_PRODUCTION_DESCRIPTION = Okay, die Produktion laeuft und die ersten Autos sind vom Band gerollt. Aber das wars noch nicht... oder?”
+NICHE_PRODUCTION_REQUIREMENTS = Stellen sie 100 Autos in einem einzelnen Spiel her.
 POCKET_CHANGE_GUINAME = Gewinne..Gewinne..Gewinne
-POCKET_CHANGE_DESCRIPTION = Ein Grosser tag fuer ihre Firma, Denn sie haben grade die Millionen Marke durchbrochen d.h 1 Million Umsatz Glueckwunsch und machen sie weiter so.”
+POCKET_CHANGE_DESCRIPTION = Ein grosser Tag fuer Ihre Firma, denn Sie haben gerade die Millionenmarke durchbrochen! D.h. 1 Million Umsatz! Glueckwunsch, und machen Sie weiter so.”
 POCKET_CHANGE_REQUIREMENTS = 1 Million Umsatz in einem einzigen Spiel.
-PREMIUM_PRODUCTION_GUINAME = Qualität zahlt sich aus
-PREMIUM_PRODUCTION_DESCRIPTION = Ihre Innovations & Investitionsstrategie haben sich ausgezahlt und einige anspruchsvolle Kunden haben nun ihre Aufmerksamkeit Ein guter Ruf bedeutet, ihr weg voran mit Erfolg gepflastert sein koennte”
-PREMIUM_PRODUCTION_REQUIREMENTS = Verkaufen sie in einem einzigen spiel 1000 autos zum preis von 25,000 euro oder Hoeher.
-RAPID_FIRE_REVENUE_GUINAME = eine halbe Million ist noch keine ganze Milion
-RAPID_FIRE_REVENUE_DESCRIPTION = Die Buchhaltung ist in feierlaune, Denn sie haben grade mittgeteilt das sie 500tsd euro Umsatz in nur einer stunde erzielt haben Bravo und weiter gehts.
-RAPID_FIRE_REVENUE_REQUIREMENTS = 500tsd euro in einer stunden Umsetzen.
-RAPID_OUTPUT_GUINAME = Mittelstaendische Production
-RAPID_OUTPUT_DESCRIPTION = Super,Sie stuern Ihr Unternehmen in die richtige richtung und behalten dabei die zeit im auge Gut so.. Lassen sie die autos weiter rollen.
-RAPID_OUTPUT_REQUIREMENTS = Stellen sie 100 Autos in 10 stunden in einem einzigen spiel her.
+PREMIUM_PRODUCTION_GUINAME = Qualitaet zahlt sich aus
+PREMIUM_PRODUCTION_DESCRIPTION = Ihre Innovations & Investitionsstrategie haben sich ausgezahlt und einige anspruchsvolle Kunden haben nun ihre Aufmerksamkeit. Ein guter Ruf bedeutet, dass Ihr weg fortan mit Erfolg gepflastert sein koennte.”
+PREMIUM_PRODUCTION_REQUIREMENTS = Verkaufen sie in einem einzigen spiel 1'000 Autos zum Preis von 25,000 oder hoeher.
+RAPID_FIRE_REVENUE_GUINAME = eine halbe Million ist noch keine ganze Million
+RAPID_FIRE_REVENUE_DESCRIPTION = Die Buchhaltung ist in Feierlaune, denn sie haben gerade mittgeteilt, dass Sie 500'000 Umsatz in nur einer Stunde erzielt haben. Bravo! Und weiter gehts.
+RAPID_FIRE_REVENUE_REQUIREMENTS = 500'000 in einer Stunde umsetzen.
+RAPID_OUTPUT_GUINAME = Mittelstaendische Produktion
+RAPID_OUTPUT_DESCRIPTION = Super, Sie steuern Ihr Unternehmen in die richtige Richtung und behalten dabei die Zeit im Auge. Gut so.. Lassen Sie die Autos weiter rollen.
+RAPID_OUTPUT_REQUIREMENTS = Stellen Sie 100 Autos in 10 Stunden in einem einzigen Spiel her.
 SERIOUS_MONEY_GUINAME = Geld..Geld..Geld
-SERIOUS_MONEY_DESCRIPTION = Glueckwunsch Die Buchaltung Laesst die Sektkorken knallen und Frau Meier Tanzt auch schon auf dem Tisch Denn sie haben grade die 10 Millionen Marke durchbrochen d.h genau 10 Million euro  Umsatz Herzlichen Glueckwunsch!
-SERIOUS_MONEY_REQUIREMENTS = Erwirtschaften sie 10 million euro umsatz in einem einzigen Spiel.
+SERIOUS_MONEY_DESCRIPTION = Glueckwunsch! Die Buchhaltung laesst die Sektkorken knallen und Frau Meier tanzt auch schon auf dem Tisch. Denn Sie haben gerade die 10 Millionen Marke durchbrochen! D.h. genau 10 Millionen Umsatz! Herzlichen Glueckwunsch!
+SERIOUS_MONEY_REQUIREMENTS = Erwirtschaften sie 10 Millionen Umsatz in einem einzigen Spiel.
 
