Dollar wieder eingepflegt

--- a/achievements.ini
+++ b/achievements.ini
@@ -1,7 +1,7 @@
 [config]
 AWESOME_OUTPUT_GUINAME = Freie fahrt Voraus
 AWESOME_OUTPUT_DESCRIPTION = Ihre Produktionslinie(n) haben eine beeindruckende Leistung gezeigt. Freie fahrt Voraus fuer ihre Firma.
-AWESOME_OUTPUT_REQUIREMENTS = Stellen sie 1'000 Autos in 50 stunden in einer einzigen Spielsitzung her.
+AWESOME_OUTPUT_REQUIREMENTS = Stellen sie 1'000 Autos in 50 Stunden in einer einzigen Spielsitzung her.
 CONSISTENT_EFFICIENCY_GUINAME = Volle fahrt Voraus
 CONSISTENT_EFFICIENCY_DESCRIPTION = Grossartige Arbeit! Die Geschaefte Laufen bestens. Sie haben verstanden, dass Effizienz das A & O in richtung Profit ist. Schnallen Sie sich an, denn ab jetzt heisst es volle fahrt Voraus fuer ihre Firma.
 CONSISTENT_EFFICIENCY_REQUIREMENTS = Halten sie die Produktionseffizienz fuer 10 Stunden bei 50%.
@@ -21,18 +21,18 @@ NICHE_PRODUCTION_GUINAME = Start-up Unternehmen
 NICHE_PRODUCTION_DESCRIPTION = Okay, die Produktion laeuft und die ersten Autos sind vom Band gerollt. Aber das wars noch nicht... oder?”
 NICHE_PRODUCTION_REQUIREMENTS = Stellen sie 100 Autos in einem einzelnen Spiel her.
 POCKET_CHANGE_GUINAME = Gewinne..Gewinne..Gewinne
-POCKET_CHANGE_DESCRIPTION = Ein grosser Tag fuer Ihre Firma, denn Sie haben gerade die Millionenmarke durchbrochen! D.h. 1 Million Umsatz! Glueckwunsch, und machen Sie weiter so.”
-POCKET_CHANGE_REQUIREMENTS = 1 Million Umsatz in einem einzigen Spiel.
+POCKET_CHANGE_DESCRIPTION = Ein grosser Tag fuer Ihre Firma, denn Sie haben gerade die Millionenmarke durchbrochen! D.h. 1 Million Dollar Umsatz! Glueckwunsch, und machen Sie weiter so.”
+POCKET_CHANGE_REQUIREMENTS = 1 Million Dollar Umsatz in einem einzigen Spiel.
 PREMIUM_PRODUCTION_GUINAME = Qualitaet zahlt sich aus
 PREMIUM_PRODUCTION_DESCRIPTION = Ihre Innovations & Investitionsstrategie haben sich ausgezahlt und einige anspruchsvolle Kunden haben nun ihre Aufmerksamkeit. Ein guter Ruf bedeutet, dass Ihr weg fortan mit Erfolg gepflastert sein koennte.”
-PREMIUM_PRODUCTION_REQUIREMENTS = Verkaufen sie in einem einzigen spiel 1'000 Autos zum Preis von 25,000 oder hoeher.
+PREMIUM_PRODUCTION_REQUIREMENTS = Verkaufen sie in einem einzigen spiel 1'000 Autos zum Preis von $25,000 oder hoeher.
 RAPID_FIRE_REVENUE_GUINAME = eine halbe Million ist noch keine ganze Million
-RAPID_FIRE_REVENUE_DESCRIPTION = Die Buchhaltung ist in Feierlaune, denn sie haben gerade mittgeteilt, dass Sie 500'000 Umsatz in nur einer Stunde erzielt haben. Bravo! Und weiter gehts.
-RAPID_FIRE_REVENUE_REQUIREMENTS = 500'000 in einer Stunde umsetzen.
+RAPID_FIRE_REVENUE_DESCRIPTION = Die Buchhaltung ist in Feierlaune, denn sie haben gerade mittgeteilt, dass Sie $500'000 Umsatz in nur einer Stunde erzielt haben. Bravo! Und weiter gehts.
+RAPID_FIRE_REVENUE_REQUIREMENTS = $500'000 in einer Stunde umsetzen.
 RAPID_OUTPUT_GUINAME = Mittelstaendische Produktion
 RAPID_OUTPUT_DESCRIPTION = Super, Sie steuern Ihr Unternehmen in die richtige Richtung und behalten dabei die Zeit im Auge. Gut so.. Lassen Sie die Autos weiter rollen.
 RAPID_OUTPUT_REQUIREMENTS = Stellen Sie 100 Autos in 10 Stunden in einem einzigen Spiel her.
 SERIOUS_MONEY_GUINAME = Geld..Geld..Geld
-SERIOUS_MONEY_DESCRIPTION = Glueckwunsch! Die Buchhaltung laesst die Sektkorken knallen und Frau Meier tanzt auch schon auf dem Tisch. Denn Sie haben gerade die 10 Millionen Marke durchbrochen! D.h. genau 10 Millionen Umsatz! Herzlichen Glueckwunsch!
-SERIOUS_MONEY_REQUIREMENTS = Erwirtschaften sie 10 Millionen Umsatz in einem einzigen Spiel.
+SERIOUS_MONEY_DESCRIPTION = Glueckwunsch! Die Buchhaltung laesst die Sektkorken knallen und Frau Meier tanzt auch schon auf dem Tisch. Denn Sie haben gerade die 10 Millionen Dollar Marke durchbrochen! D.h. genau 10 Millionen Dollar Umsatz! Herzlichen Glueckwunsch!
+SERIOUS_MONEY_REQUIREMENTS = Erwirtschaften sie 10 Millionen Dollar Umsatz in einem einzigen Spiel.
 
