--- a/strings.ini
+++ b/strings.ini
@@ -7,7 +7,7 @@ FEAT_TT_VALUE			= "Wert"
 TECH_TREE_COMPETITION		= "Konkurrenz Gebrauch:"
 SALES_CATEGORY			= "Preis Kategorie:"
 
-MESS_122_TITLE			= "Version 1.22 - Wichtige Aenderungen"
+MESS_122_TITLE			= "Version 1.23 - Wichtige Aenderungen"
 MESS_122			= "Bitte beachten Sie, Seit Version 1.22 hat sich die Reihenfolge, wie die Felgen, Reifen und Bremsen montiert werden, geaendert! Sie muessen Ihre vorhandenen Produktionslinien dahingeghend anpassen."
 
 TECHTT_REQUIREMENT		= "Benoetigt:"
@@ -49,7 +49,7 @@ STYLE_CHANGE			= "Wechseln"
 STYLE_SCHEDULER_TITLE		= "Produktions Zeitplan"
 
 MISSION_EDITOR_SIZE		= "Karten Groesse:"
-EDITOR_APPLY			= "Uebernehmen"
+EDITOR_APPLY			= "Ubernehmen"
 MISSION_EDITOR_CASH		= "Start Geld:"
 UPGRADES_NEW			= "Neu!"
 OPTIONS_RESET_TUTORIAL		= "Tutorial zuruecksetzen"
@@ -199,9 +199,9 @@ EXPANSION_EXPLANATION		= "Sie Haben nun die Moeglichkeit ins Nachbargebaeude zu 
 MISSION_EDITOR_TYPE		= "Zonen Typ:"
 MISSION_EDITOR_NAME		= "Zonen Name:"
 MISSION_EDITOR_RENT		= "Zonen Miete:"
-MISSION_EDITOR_WALLS		= "Zonen Wand:
-MISSION_EDITOR_FLOOR		= "Zonen Boden:"
-EDITOR_EXPORTS			= "Exporte"
+MISSION_EDITOR_WALLS		= "Anzahl Waende:
+MISSION_EDITOR_FLOOR		= "Boden Plan:"
+EDITOR_EXPORTS			= "Export Slot Erstellen"
 
 LS_SAVING_FACILITIES		= "Speichere Anlagen"
 LS_SAVING_SLOTS			= "Speichere Slots"
@@ -262,9 +262,9 @@ UNLOCKED_FACILITY		= "(Neue Anlage)"
 UNLOCKED_UPGRADE		= "(Neues Upgrade)"
 
 COMPLETE_UNLOCKED		= "Freigeschaltet:"
-EDITOR_IMPORTS			= "Import Slots"
+EDITOR_IMPORTS			= "Import Slot Erstellen"
 EDITOR_SAVE			= "Speichern"
-EDITOR_CREATE_ZONE		= "erstelle Zone"
+EDITOR_CREATE_ZONE		= "Zone Erstellen"
 MISSION_EDITOR_TITLE		= "Missions Editor"
 CHOOSE_MISSION_EDIT		= "Bearbeiten"
 
@@ -303,7 +303,7 @@ OPTIONS_MUSIC_TT		= "Lautstaerke der Hintergrundmusik"
 OPTIONS_MASTERVOLUME		= "Gesamtlautstaerke:"
 OPTIONS_MASTERVOLUME_TT		= "Der Allesregulierenderegler"
 
-OPTIONS_APPLY_CHANGES		= "Aenderungen Uebernehmen"
+OPTIONS_APPLY_CHANGES		= "Aenderungen Ubernehmen"
 OPTIONS_APPLY_CHANGES_TT	= "Mit diesen Einstellungen Sofort Neustarten"
 
 ADD_TO_STOCKPILE		= "Zum Lager Hinzfuegen"
