--- a/achievements.ini
+++ b/achievements.ini
@@ -26,7 +26,7 @@ POCKET_CHANGE_REQUIREMENTS = 1 Million Dollar Umsatz in einem einzigen Spiel.
 PREMIUM_PRODUCTION_GUINAME = Qualitaet zahlt sich aus
 PREMIUM_PRODUCTION_DESCRIPTION = Ihre Innovations & Investitionsstrategie haben sich ausgezahlt und einige anspruchsvolle Kunden haben nun ihre Aufmerksamkeit. Ein guter Ruf bedeutet, dass Ihr weg fortan mit Erfolg gepflastert sein koennte.”
 PREMIUM_PRODUCTION_REQUIREMENTS = Verkaufen sie in einem einzigen spiel 1'000 Autos zum Preis von $25,000 oder hoeher.
-RAPID_FIRE_REVENUE_GUINAME = eine halbe Million ist noch keine ganze Million
+RAPID_FIRE_REVENUE_GUINAME = Schneller Profit
 RAPID_FIRE_REVENUE_DESCRIPTION = Die Buchhaltung ist in Feierlaune, denn sie haben gerade mittgeteilt, dass Sie $500'000 Umsatz in nur einer Stunde erzielt haben. Bravo! Und weiter gehts.
 RAPID_FIRE_REVENUE_REQUIREMENTS = $500'000 in einer Stunde umsetzen.
 RAPID_OUTPUT_GUINAME = Mittelstaendische Produktion
