--- a/features.ini
+++ b/features.ini
@@ -1,6 +1,6 @@
 [config]
 FEATURE_BASIC_CAR_GUINAME = Einfaches Auto
-FEATURE_BASIC_QA_GUINAME = Qualitäts Kontrolle
+FEATURE_BASIC_QA_GUINAME = Qualitaets Kontrolle
 FEATURE_ANTILOCK_BRAKES_GUINAME = Antiblockiersystem
 FEATURE_REVERSING_CAMERA_GUINAME = Rückfahrkamera
 FEATURE_TIRE_PRESSURE_SENSORS_GUINAME = Reifendruck Sensoren
