--- a/productiontasks.ini
+++ b/productiontasks.ini
@@ -69,14 +69,14 @@ TASK_FIT_AIRCON_GUINAME = Klimaanlagen Montage
 TASK_FIT_EXHAUST_GUINAME = Auspuff Montage
 TASK_FIT_ENGINE_ASSEMBLY_GUINAME = Antriebswellen Montage
 TASK_FIT_UNDERCARRIAGE_GUINAME = Fahrgestell Montage
-TASK_FIT_AXLES_GUINAME = Achsen Montage
+TASK_FIT AXLES_GUINAME = Achsen Montage
 TASK_FUEL_TANK_GUINAME = Benzintank Montage
 TASK_PAINT_FINISH_GUINAME = Finale Lackierung
 TASK_PAINT_UNDERCOAT_GUINAME = Farb Grundierung
 TASK_POLISH_PAINTWORK_GUINAME = Polierung
 TASK_FIT_ELECTRONICS_GUINAME = Elektronik Montage
-TASK_FIT_CHASSIS_GUINAME = Fahrgestell Montage 
-CATEGORY_ADVANCED_MANUFACTURING_GUINAME = Fortgeschrittene Montage
+TASK_FIT CHASSIS_GUINAME = Fahrgestell Montage 
+CATEGORY_ADVANCED_MANUFACTURING_GUINAME = Servos und Sensoren 
 TASK_FIT_BODY_GUINAME = Karosserie Montage
 TASK_CONVEYOR_GUINAME = Foerderband
 TASK_EXPORT_GUINAME = Export
