--- a/strings.ini
+++ b/strings.ini
@@ -83,15 +83,15 @@ EDITOR_MODE_PLACEIMPORTS	= "Plaziere eine Import Zone"
 NEWDESIGN_GLOBAL		= "Premium Verkaufspreis:"
 MARKUP_MARKET_VALUE		= "Marktwert:"
 MARKUP_EDITOR_TITLE		= "Preis fuer individuele Merkmale :"
-MARKUP_REDUCE			= "Verringern"
-MARKUP_INCREASE			= "Erhoehen"
+MARKUP_REDUCE			= "Billiger"
+MARKUP_INCREASE			= "Teurer"
 
 MARKUP_PRICE			= "Aktueller Preis:"
 MARKUP_MARKUP			= "Premium:"
 MARKUP_MARKUP_CASH		= "Premium (Bar):"
 MARKUP_INITIAL_VALUE		= "Grundpreis:"
 
-DESIGN_STRIP_DETAILS		= "Zeige Details"
+DESIGN_STRIP_DETAILS		= "Details"
 CAR_DESIGNS_TITLE		= "Auto Designs"
 DESIGN_STRIP_DESIGN		= "Design Name:"
 
@@ -176,7 +176,7 @@ UPDATE_NEW_VERSION		= "Neue Version:"
 UPDATE_CURRENT			= "Diese Version:"
 
 CAR_STOCK_TOGGLE		= "Verstecke Modelle, die nicht vorraetig sind."
-OPT_CONVEYOR_GUI		= "Materialtransportsystem Ansicht"
+OPT_CONVEYOR_GUI		= "Foerderband GUI"
 
 CONFIRM_YES			= "Ja"
 CONFIRM_NO			= "Nein"
@@ -278,17 +278,17 @@ STOCK_STOCK			= "Nicht Verkauft:"
 STOCK_PRICE			= "Preis:"
 STOCK_PREMIUM			= "Premium/Rabatt:"
 
-CAR_STOCK_TITLE			= "Autobestaende(Showroom)"
-MENU_CAR			= "Autobestaende/Verkaeufe"
+CAR_STOCK_TITLE			= "Verkaufsraum"
+MENU_CAR			= "Verkaeufe"
 
 NEWDESIGN_PRICE_PERC		= "Premium/Discount"
 NEWDESIGN_PRICE_PRICE		= "Verkaufspreis:"
 NEWDESIGN_PRICE_FAIR		= "Marktwert:"
-NEWDESIGN_PRICE_PROFIT		= "Premium/Discount:"
+NEWDESIGN_PRICE_PROFIT		= "Rabatte:"
 
 SAVE_FILENAME			= "Dateiname:"
 SAVE_CHOOSE_NAME		= "Speichern"
-SAVE_GAME_TITLE			= "Spielstand"
+SAVE_GAME_TITLE			= "Spielstand Speichern"
 
 RESEARCH_COMPLETE		= "Forschung abgeschlossen!"
 CHOOSE_RESEARCH			= "Waehle das naechste Forschungsprojekt"
