--- a/productiontasks.ini
+++ b/productiontasks.ini
@@ -80,7 +80,7 @@ CATEGORY_ADVANCED_MANUFACTURING_GUINAME = Servos und Sensoren
 TASK_FIT_BODY_GUINAME = Karosserie Montage
 TASK_CONVEYOR_GUINAME = Foerderband
 TASK_EXPORT_GUINAME = Export
-TASK_PAINT_GUINAME = Farbe
+TASK_PAINT_GUINAME = Lackierung
 TASK_FIT_ACCESSORIES_GUINAME = Zubehoer Montage
 TASK_FIT_ENGINE_GUINAME = Motor Montage
 CATEGORY_FACILITIES_GUINAME = Anlagen
