--- a/features.ini
+++ b/features.ini
@@ -1,7 +1,7 @@
 [config]
 FEATURE_BASIC_CAR_GUINAME = Einfaches Auto
-FEATURE_BASIC_QA_GUINAME = Qualitaets Kontrolle
-FEATURE_ANTILOCK_BRAKES_GUINAME = Antiblockiersystem
+FEATURE_BASIC_QA_GUINAME = Qualitätskontrolle
+FEATURE_ANTILOCK_BRAKES_GUINAME = Antiblockiersystem (ABS)
 FEATURE_REVERSING_CAMERA_GUINAME = Rückfahrkamera
 FEATURE_TIRE_PRESSURE_SENSORS_GUINAME = Reifendruck Sensoren
 FEATURE_DRIVER_AIRBAG_GUINAME = Fahrer Airbag
@@ -24,14 +24,14 @@ FEATURE_HEATED_SEATS_GUINAME = Beheitzte Sitze
 FEATURE_LEATHER_INTERIOR_GUINAME = Leder Innenausstattung
 FEATURE_SUN_ROOF_GUINAME = Schiebedach
 FEATURE_PANORAMIC_SUNROOF_GUINAME = Panorama Schiebedach
-FEATURE_ELECTRIC_WINDOWS_GUINAME = Elektronische Fenster
+FEATURE_ELECTRIC_WINDOWS_GUINAME = Elektronische Fensterheber
 FEATURE_SATNAV_GUINAME = GPS Navigationssystem
 FEATURE_AUTO_WIPERS_GUINAME = Automatische Scheibenwischer
 FEATURE_AUTO_HEADLIGHTS_GUINAME = Automatische Frontscheinwerfer
-FEATURE_POWERED_SEATS_GUINAME = Elektrische Sitze
+FEATURE_POWERED_SEATS_GUINAME = Verstellbare Sitze
 FEATURE_POWERED_STEER_ADJUSTMENT_GUINAME = Lenkhilfe
 FEATURE_POWERED_TAILGATE_GUINAME = Automatische Heckklappe
-FEATURE_IN_CAR_MUSIC_GUINAME = Boardentertainment
+FEATURE_IN_CAR_MUSIC_GUINAME = Entertainment System
 FEATURE_BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Telefon Unterstuetzung
 FEATURE_VOICE_RECOGNITION_GUINAME = Spracherkennung
 FEATURE_ALUMINIUM_BODY_GUINAME = Aluminium Karosse
