--- a/research.ini
+++ b/research.ini
@@ -151,13 +151,13 @@ RESEARCH_RESEARCH_CENTERS_GUINAME = Forschungszentrum
 RESEARCH_RESEARCH_CENTERS_DESCRIPTION
 RESEARCH_SAFETY_FEATURES_GUINAME = Gefahrenabwehr Systeme
 RESEARCH_SAFETY_FEATURES_DESCRIPTION
-RESEARCH_ANTILOCK_BRAKES_GUINAME = AntibLockiersystem (ABS)
+RESEARCH_ANTILOCK_BRAKES_GUINAME = Antiblockiersystem (ABS)
 RESEARCH_ANTILOCK_BRAKES_DESCRIPTION
-RESEARCH_EMERGENCY_BRAKE_ASSIST_GUINAME = Notfall Brems Assistent
+RESEARCH_EMERGENCY_BRAKE_ASSIST_GUINAME = Notfall Bremsassistent
 RESEARCH_EMERGENCY_BRAKE_ASSIST_DESCRIPTION
-RESEARCH_REVERSING_CAMERA_GUINAME = Rueckfahr Kamera
+RESEARCH_REVERSING_CAMERA_GUINAME = Rueckfahrkamera
 RESEARCH_REVERSING_CAMERA_DESCRIPTION
-RESEARCH_TIRE_PRESSURE_SENSORS_GUINAME = Reifendruck Sensor
+RESEARCH_TIRE_PRESSURE_SENSORS_GUINAME = Reifendruck Sensoren
 RESEARCH_TIRE_PRESSURE_SENSORS_DESCRIPTION
 RESEARCH_DRIVER_AIRBAG_GUINAME = Fahrer Airbag
 RESEARCH_DRIVER_AIRBAG_DESCRIPTION
@@ -179,7 +179,7 @@ RESEARCH_ADAPTIVE_CRUISE_CONTROL_GUINAME = Adaptiver Tempomat
 RESEARCH_ADAPTIVE_CRUISE_CONTROL_DESCRIPTION
 RESEARCH_TRAFFIC_AWARE_CRUISE_CONTROL_GUINAME = Voll Automatischer Tempomat
 RESEARCH_TRAFFIC_AWARE_CRUISE_CONTROL_DESCRIPTION
-RESEARCH_SECURITY_FEATURES_GUINAME = Sicherheits Systeme
+RESEARCH_SECURITY_FEATURES_GUINAME = Sicherheitssysteme
 RESEARCH_SECURITY_FEATURES_DESCRIPTION
 RESEARCH_CENTRAL_LOCKING_GUINAME = Zentraverriegelung
 RESEARCH_CENTRAL_LOCKING_DESCRIPTION
@@ -201,7 +201,7 @@ RESEARCH_HEATED_SEATS_GUINAME = Beheitzte Sitze
 RESEARCH_HEATED_SEATS_DESCRIPTION
 RESEARCH_LEATHER_INTERIOR_GUINAME = Leder Innenausstatung
 RESEARCH_LEATHER_INTERIOR_DESCRIPTION
-RESEARCH_SUN_ROOF_GUINAME = Schiebe Dach
+RESEARCH_SUN_ROOF_GUINAME = Schiebedach
 RESEARCH_SUN_ROOF_DESCRIPTION
 RESEARCH_PANORAMIC_SUNROOF_GUINAME = Panorama Schiebedach
 RESEARCH_PANORAMIC_SUNROOF_DESCRIPTION
@@ -209,7 +209,7 @@ RESEARCH_CONVENIENCE_FEATURES_GUINAME = Komfort Merkmale
 RESEARCH_CONVENIENCE_FEATURES_DESCRIPTION
 RESEARCH_ELECTRIC_WINDOWS_GUINAME = Elektrische Fensterheber
 RESEARCH_ELECTRIC_WINDOWS_DESCRIPTION
-RESEARCH_SATNAV_GUINAME = GPS Navigation
+RESEARCH_SATNAV_GUINAME = GPS Navigationssystem
 RESEARCH_SATNAV_DESCRIPTION
 RESEARCH_AUTO_WIPERS_GUINAME = Automatische Scheibenwischer
 RESEARCH_AUTO_WIPERS_DESCRIPTION
@@ -233,7 +233,7 @@ RESEARCH_IN_CAR_MUSIC_GUINAME = Entertainment System
 RESEARCH_IN_CAR_MUSIC_DESCRIPTION
 RESEARCH_BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Telefon Unterstuetzung
 RESEARCH_BLUETOOTH_PHONE_SUPPORT_DESCRIPTION
-RESEARCH_VOICE_RECOGNITION_GUINAME = Sprach Erkennung
+RESEARCH_VOICE_RECOGNITION_GUINAME = Spracherkennung
 RESEARCH_VOICE_RECOGNITION_DESCRIPTION
 RESEARCH_TOUCHSCREEN_GUINAME = Touchscreen
 RESEARCH_TOUCHSCREEN_DESCRIPTION
