--- a/upgrades.ini
+++ b/upgrades.ini
@@ -20,9 +20,9 @@ EXPEDITED_SALES_GUINAME = Beschleunigter Verkauf
 EXTRAROBOTS1_GUINAME = Extra Roboter I
 EXTRAROBOTS2_GUINAME = Extra Roboter II
 EXTRAROBOTS3_GUINAME = Extra Roboter III
-FASTER_DRYING_GUINAME = Schnellere Trockung
-FASTER_DRYING2_GUINAME = Turbo Trockung
-FASTER_DRYING3_GUINAME = Ultra schnelle Trocknung
+FASTER_DRYING_GUINAME = Schnelles Trocknen
+FASTER_DRYING2_GUINAME = Turbo Trocknen
+FASTER_DRYING3_GUINAME = Ultra Schnelles Trocknen
 HEATED_SEATS_GUINAME = Sitzheizung
 HEATER_GUINAME = Heizung
 IN_CAR_MUSIC_GUINAME = Entertainment System
@@ -45,9 +45,9 @@ REVERSING_CAMERA_GUINAME = Rückfahrkamera
 SATNAV_GUINAME = GPS Navigation
 SPARE_WHEEL_GUINAME = Reserverad
 SPOILER_GUINAME = Spoiler
-STOP_START_ENGINE_GUINAME = Start-Stop Motor
+STOP_START_ENGINE_GUINAME = Start-Stop Automatik
 SUN_ROOF_GUINAME = Schiebedach
-TIRE_PRESSURE_SENSORS_GUINAME = Reifendrucksensoren
+TIRE_PRESSURE_SENSORS_GUINAME = Reifendrucksensor
 TOUCHSCREEN_GUINAME = Touchscreen
 TRAFFIC_AWARE_CRUISE_CONTROL_GUINAME = Vollautomatischer Tempomat
 VOICE_RECOGNITION_GUINAME = Spracherkennung
