--- a/strings.ini
+++ b/strings.ini
@@ -1,4 +1,19 @@
 [strings]
+NEW_BODY_STYLE			= "New Body Style:"
+
+SHOWROOM_MISSING		= "Missing (Expected) Features:
+SHOWROOM_UNINSTALLED		= "Uninstalled Features:"
+SHOWROOM_THOUGHTS		= "Customer Thoughts:"
+SFB_SALESCAT_TOO_LOW		= "Price range too low"
+SFB_SALESCAT_TOO_HIGH		= "Price range too high"
+SFB_WRONG_BODYSTYLE		= "Wrong bodystyle"
+SFB_OVERPRICED			= "Poor value for money"
+SFB_MISSING_FEATURES		= "Missing vital features"
+
+OPT_PAUSE_RES_COMPLETE		= "Pause on research complete"
+RES_COMPLETE_UPGRADE_ALL	= "Upgrade All Slots"
+OPT_IMPORTERS_ALWAYS		= "Always Show Importer GUI"
+
 FEAT_TT_CATEGORY		= "Kategorie"
 FEAT_TT_RARITY			= "Seltenheit"
 FEAT_TT_PREMIUM			= "Premium"
