--- a/productiontasks.ini
+++ b/productiontasks.ini
@@ -67,7 +67,7 @@ TASK_FIT_SEATS_GUINAME = Sitz Montage
 TASK_FIT_WINDSCREEN_GUINAME = Frontscheiben Montage
 TASK_FIT_AIRCON_GUINAME = Klimaanlagen Montage
 TASK_FIT_EXHAUST_GUINAME = Auspuff Montage
-TASK_FIT_ENGINE_ASSEMBLY_GUINAME = Antriebswellen Montage
+TASK_FIT_ENGINE_ASSEMBLY_GUINAME = Antriebs Montage
 TASK_FIT_UNDERCARRIAGE_GUINAME = Fahrgestell Montage
 TASK_FIT AXLES_GUINAME = Achsen Montage
 TASK_FUEL_TANK_GUINAME = Benzintank Montage
