--- a/resources.ini
+++ b/resources.ini
@@ -1,58 +1,58 @@
 [config]
-AERIAL_GUINAME = Aerial
+AERIAL_GUINAME = Antenne
 AIRBAG_GUINAME = Airbag
-AIRCON_GUINAME = Aircon Unit
+AIRCON_GUINAME = Klimaeinheit
 ALARM_GUINAME = Alarm
-WHEEL_ALLOY_GUINAME = Alloy Wheel
-AXLE_GUINAME = Axle
-ROLLCAGE_GUINAME = Body Shell
-BRAKE_GUINAME = Brake
-CAMERA_GUINAME = Camera
+WHEEL_ALLOY_GUINAME = Leichtmetall Felge
+AXLE_GUINAME = Achse
+ROLLCAGE_GUINAME = Karosse
+BRAKE_GUINAME = Bremse
+CAMERA_GUINAME = Kamera
 CHIP_GUINAME = Chip
-CLIMATE_CONTROL_GUINAME = Climate Control Unit
-DOOR PANEL_GUINAME = Door Panel
-DRIVE SHAFT_GUINAME = Drive Shaft
-ENGINE_ASSEMBLY_GUINAME = Engine Assembly
-ENGINE_BLOCK_GUINAME = Engine Block
-STARTER MOTOR_GUINAME = Engine Control Unit
-EXHAUST_GUINAME = Exhaust
-FRONT ARCH_GUINAME = Front Arch
-FRONT BUMPER_GUINAME = Front Bumper
-FUEL TANK_GUINAME = Fuel Tank
-GLASS_GUINAME = Glass
-HEATER_GUINAME = Heater
-BONNET_GUINAME = Hood
-HORN_GUINAME = Horn
-LEATHER_GUINAME = Leather
-LIGHT_GUINAME = Light
-PAINT_GUINAME = Paint
-PANORAMIC_SUNROOF_GUINAME = Panoramic Sunroof
-POWERTRAIN_GUINAME = PowerTrain
-RADIATOR_GUINAME = Radiator
-REAR ARCH_GUINAME = Rear Arch
-REAR BUMPER_GUINAME = Rear Bumper
-ROOF_GUINAME = Roof
-RUBBER_GUINAME = Rubber
-SATNAV_GUINAME = SatNav
-SEAT_GUINAME = Seat
+CLIMATE_CONTROL_GUINAME = Klimasteuerung
+DOOR PANEL_GUINAME = Tuerverkleidung
+DRIVE SHAFT_GUINAME = Abtriebswelle
+ENGINE_ASSEMBLY_GUINAME = Antrieb
+ENGINE_BLOCK_GUINAME = Motorblock
+STARTER MOTOR_GUINAME = Motorsteuerung
+EXHAUST_GUINAME = Auspuff
+FRONT ARCH_GUINAME = Vordere Kotfluegel
+FRONT BUMPER_GUINAME = Vordere Stossstange
+FUEL TANK_GUINAME = Tank
+GLASS_GUINAME = Glas
+HEATER_GUINAME = Heizung
+BONNET_GUINAME = Motorhaube
+HORN_GUINAME = Hupe
+LEATHER_GUINAME = Leder
+LIGHT_GUINAME = Licht
+PAINT_GUINAME = Lack
+PANORAMIC_SUNROOF_GUINAME = Panoramadach
+POWERTRAIN_GUINAME = Antrieb
+RADIATOR_GUINAME = Heizung
+REAR ARCH_GUINAME = Hintere Kotfluegel
+REAR BUMPER_GUINAME = Hintere Stossstange
+ROOF_GUINAME = Dach
+RUBBER_GUINAME = Gummi
+SATNAV_GUINAME = GPS
+SEAT_GUINAME = Sitz
 SENSOR_GUINAME = Sensor
 SERVO_GUINAME = Servo
 SPOILER_GUINAME = Spoiler
-STEEL_GUINAME = Steel
-STEEL_SHEET_GUINAME = Steel Sheet
-STEERING COLUMN_GUINAME = Steering Column
-STEERING WHEEL_GUINAME = Steering Wheel
-SUNROOF_GUINAME = Sunroof
-TIRE_GUINAME = Tire
+STEEL_GUINAME = Stahl
+STEEL_SHEET_GUINAME = Stahlblech
+STEERING COLUMN_GUINAME = Lenksaeule
+STEERING WHEEL_GUINAME = Lenkrad
+SUNROOF_GUINAME = Schiebedach
+TIRE_GUINAME = Reifen
 TOUCHSCREEN_GUINAME = Touchscreen
-TRANSMISSION_GUINAME = Transmission
-BOTTOMTRIM_GUINAME = Trim
-BOOT_GUINAME = Trunk
-UNDERCARRIAGE_GUINAME = Undercarriage
-VALVE_GUINAME = Valve
-VENT_GUINAME = Vent
-WHEEL_GUINAME = Wheel
-WINDOW_GUINAME = Window
-WINDSCREEN_GUINAME = Windscreen
-WING MIRROR_GUINAME = WingMirror
+TRANSMISSION_GUINAME = Getriebe
+BOTTOMTRIM_GUINAME = Zierleisten
+BOOT_GUINAME = Heckklappe
+UNDERCARRIAGE_GUINAME = Fahrgestell
+VALVE_GUINAME = Ventil
+VENT_GUINAME = Lueftung
+WHEEL_GUINAME = Rad
+WINDOW_GUINAME = Fenster
+WINDSCREEN_GUINAME = Windschutzscheibe
+WING MIRROR_GUINAME = Seitenspiegel
 
